tests/specs/ecosystem/denosaurs/log/0_0_1.test
denosaurs/log/0.0.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'ReadableStream<Log>'.
  cancel(reason?: any): Promise<void> {
  ~~~~~~
    at file://<tmpdir>/mod.ts:29:3

error: Type checking failed.

